--- a/wp/wp-content/themes/spa-wellness-japan/css/global/component/_component.scss
+++ b/wp/wp-content/themes/spa-wellness-japan/css/global/component/_component.scss
@@ -77,6 +77,7 @@
   line-height: normal;
   letter-spacing: 0.5px;
   border-radius: 30px;
+  background-color: $color-secondary;
 }
 // ==========================================================================
 // ボタンコンポーネント
