--- a/wp/wp-content/themes/spa-wellness-japan/css/layout/_layout.scss
+++ b/wp/wp-content/themes/spa-wellness-japan/css/layout/_layout.scss
@@ -231,6 +231,11 @@
           justify-content: center;
           gap: 5px;
           background-color: transparent;
+          font-size: 14px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+          letter-spacing: 1.4px;
         }
         &:hover{
           @include breakPoint_over-PC {
@@ -332,7 +337,7 @@
                   font-weight: 500;
                   line-height: normal;
                   letter-spacing: 0.8px;
-                  padding-left: 13px;
+                  padding: 0 0 0 13px;
                 }
                 &:hover{
                   color: #3C6FAC;
@@ -1380,7 +1385,8 @@
   }
   .gf_links-02 {
     @include breakPoint_over-PC {
-      display: grid;
+      display: flex;
+      flex-direction: column;
       gap: 20px;
     }
     li {
